# ebview

./: .editorconfig  AUTHORS  ChangeLog  INSTALL.win32  Makefile.am  NEWS  README  autogen.sh  configure.ac  configure.in  ebview.spec
data/: Makefile.am  about.en.in  about.jp.in  endinglist-ja.xml  endinglist.xml  filter.xml  searchengines.xml  shortcut.xml
doc/: Makefile.am
doc/en/: body.html  index.html
doc/ja/: body.html  index.html  menu.html
m4/: ebview.m4
pixmaps/: book_closed.xpm  book_open.xpm  cdrom.xpm  down.xpm  ebook.xpm  ebview.xpm  file.xpm  folder_closed.xpm  folder_open.xpm  globe.xpm  home.xpm  html.xpm  item.xpm  jump.xpm  left.xpm  list.xpm  multi.xpm  new.xpm  paste.xpm  paste2.xpm  popup.xpm  popup2.xpm  push-off.xpm  push-on.xpm  refresh.xpm  right.xpm  run.xpm  search.xpm  small-close.xpm  small-left.xpm  small-right.xpm  stop.xpm  up.xpm
po/: POTFILES.in  ja.po
src/: Makefile.am  bmh.c  bmh.h  cellrenderercolor.c  cellrenderercolor.h  cellrendererebook.c  cellrendererebook.h  defs.h  dialog.c  dialog.h  dictbar.c  dictbar.h  dirtree.c  dirtree.h  dump.c  dump.h  eb.c  eb.h  ebview-client.c  ebview.c  ebview.h  ebview.rc  external.c  external.h  filter.c  filter.h  global.h  grep.c  grep.h  headword.c  headword.h  history.c  history.h  hook.c  hook.h  intl.h  jcode.c  jcode.h  link.c  link.h  (+68 more)
util/: Makefile.am  ebdump.c
