bin_PROGRAMS = ebdump

AM_CPPFLAGS= @EBCONF_PTHREAD_CPPFLAGS@ @EBCONF_EBINCS@ \
             @EBCONF_ZLIBINCS@ @EBCONF_INTLINCS@
AM_CFLAGS = @GTK_CFLAGS@  @EBCONF_PTHREAD_CFLAGS@
AM_CXXFLAGS = @GTK_CFLAGS@  @EBCONF_PTHREAD_CFLAGS@ 
ebdump_LDADD = @GTK_LIBS@ \
               @EBCONF_EBLIBS@ @EBCONF_ZLIBLIBS@ @EBCONF_INTLLIBS@ 
ebdump_LDFLAGS = @EBCONF_PTHREAD_LDFLAGS@

ebdump_SOURCES=  \
	ebdump.c

